--- a/pom.xml
+++ b/pom.xml
@@ -54,7 +54,7 @@
 		<dependency>
 			<groupId>io.reactivex.rxjava2</groupId>
 			<artifactId>rxjava</artifactId>
-			<version>2.0.8</version>
+			<version>2.2.2</version>
 		</dependency>
 		<dependency>
 			<groupId>org.assertj</groupId>
@@ -92,7 +92,7 @@
 			<dependency>
 				<groupId>io.projectreactor</groupId>
 				<artifactId>reactor-bom</artifactId>
-				<version>Bismuth-SR11</version>
+				<version>Californium-RELEASE</version>
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency>
